# xiv-midi

./: Cargo.toml  README.md
.claude/: settings.local.json
mappings/: README.md  default_ffxiv.json
src/: engine.rs  error.rs  keyboard.rs  lib.rs  mapping.rs  midi.rs
