[package]
name = "xiv-midi"
version = "0.1.0"
edition = "2024"
authors = ["AzurIce"]
license = "MIT"
description = "Convert MIDI input to keyboard presses for FFXIV performance system"

[[bin]]
name = "xiv-midi"
path = "src/bin/xiv-midi.rs"

[[bin]]
name = "xiv-midi-gui"
path = "src/bin/xiv-midi-gui.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
midir = "0.10"
enigo = "0.6"
eframe = "0.33"
crossbeam-channel = "0.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
winrt = ["midir/winrt"]
